# psyexp-core

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  tests.yml
docs/: ci-setup.md  releasing.md
src/psyexp_core/: __init__.py  diagnostics.py  instructions.py  keyboard.py  manifest.py  manifest_models.py  recording.py  rundir.py  screen.py  wizard.py
src/psyexp_core/screen/: __init__.py  info.py  monitors.py  picker.py  platform_detail.py  setup.py
tests/: test_keyboard.py  test_manifest.py  test_recording.py
