[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psyexp-core"
version = "v0.5.1"
description = "Task-agnostic harness for PsychoPy experiments: screen/frame-timing setup, run manifests, CSV writers, setup-wizard primitives, instruction pager, and keyboard abstraction."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eric Wang" }]
urls = { Homepage = "https://github.com/HAPNlab/psyexp-core", Repository = "https://github.com/HAPNlab/psyexp-core" }
dependencies = [
    "psychopy>=2025.1",
    "rich>=14.3.3",
    "questionary>=2.0",
    "prompt_toolkit>=3.0",
    "pyobjc-framework-quartz>=10; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/psyexp_core"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.uv.extra-build-dependencies]
pyobjc-framework-quartz = ["pkg_resources"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "Q"]

[tool.pytest.ini_options]
testpaths = ["tests"]
