[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psyexp-core"
version = "0.9.0"
description = "Task-agnostic harness for PsychoPy experiments: screen/frame-timing setup, run manifests, CSV writers, setup-wizard primitives, instruction pager, and keyboard abstraction."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Eric Wang" }]
classifiers = ["Programming Language :: Python :: 3.11"]
urls = { Homepage = "https://github.com/HAPNlab/psyexp-core", Repository = "https://github.com/HAPNlab/psyexp-core" }
dependencies = [
    "psychopy>=2025.1",
    "pyglet>=1.4",
    "rich>=14.3.3",
    "questionary>=2.0",
    "prompt_toolkit>=3.0",
    "numpy",
    "py-cpuinfo",
    "pydantic>=2",
    "pyobjc-framework-quartz>=10; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/psyexp_core"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.uv.extra-build-dependencies]
pyobjc-framework-quartz = ["pkg_resources"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "Q"]

[tool.pytest.ini_options]
testpaths = ["tests"]
